[workspace]
members = ["crates/*", "bin/*"]
default-members = ["bin/opt8n", "bin/opd8n", "bin/range-finder"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>", "refcell"]
repository = "https://github.com/ethereum-optimism/op-test-vectors"
homepage = "https://github.com/ethereum-optimism/op-test-vectors"
exclude = ["**/target", "benches/", "tests"]

[workspace.dependencies]
# General
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
color-eyre = "0.6"
lazy_static = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
shellwords = "1"
reqwest = "0.12"
tracing-subscriber = "0.3.18"
hashbrown = "0.14.5"

# Alloy Dependencies
op-alloy-rpc-types = "0.1.4"
op-alloy-consensus = "0.1.4"
alloy-primitives = { version = "0.7" }
alloy-consensus = { version = "0.2" }
alloy-eips = { version = "0.2" }
alloy-rpc-types = { version = "0.2" }

# Foundry Dependencies
foundry-common = { git = "https://github.com/foundry-rs/foundry", default-features = true, rev = "c600237f3e54604274bfdcba627f347493fd21d2" }
foundry-compilers = { git = "https://github.com/foundry-rs/foundry", default-features = true, rev = "c600237f3e54604274bfdcba627f347493fd21d2" }
anvil = { git = "https://github.com/foundry-rs/foundry", default-features = true, rev = "c600237f3e54604274bfdcba627f347493fd21d2" }
anvil-core = { git = "https://github.com/foundry-rs/foundry", default-features = true, rev = "c600237f3e54604274bfdcba627f347493fd21d2" }
cast = { git = "https://github.com/foundry-rs/foundry", rev = "c600237f3e54604274bfdcba627f347493fd21d2" }
forge-script = { git = "https://github.com/foundry-rs/foundry", rev = "c600237f3e54604274bfdcba627f347493fd21d2" }
revm = { version = "12.1", features = ["alloydb", "optimism"] }

# Kona + OP Types
superchain-registry = "0.2.2"
kona-derive = { git = "https://github.com/ethereum-optimism/kona", rev = "4e57dd35ea08b31d0baa293c7a12165f28e6cd92", features = ["online"] }

# Internal
op-test-vectors = { path = "crates/op-test-vectors" }
