[workspace]
members = ["crates/*", "bin/*"]
default-members = ["bin/opt8n", "bin/opd8n", "bin/range-finder"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>", "refcell"]
repository = "https://github.com/ethereum-optimism/op-test-vectors"
homepage = "https://github.com/ethereum-optimism/op-test-vectors"
exclude = ["**/target", "benches/", "tests"]

[workspace.dependencies]
# General
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
color-eyre = "0.6"
lazy_static = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
shellwords = "1"
reqwest = { version = "0.12", features = ["stream"] }
tracing-subscriber = "0.3.18"

# Alloy Dependencies
op-alloy-rpc-types = "0.1.4"
op-alloy-consensus = "0.1.4"
alloy-primitives = { version = "0.7" }
alloy-consensus = { version = "0.2" }
alloy-eips = { version = "0.2" }
alloy-rpc-types = { version = "0.2" }

# Foundry Dependencies
foundry-common = { git = "https://github.com/foundry-rs/foundry", default-features = true, rev = "26a7559758c192911dd39ce7d621a18ef0d419e6" }
foundry-compilers = { git = "https://github.com/foundry-rs/foundry", default-features = true, rev = "26a7559758c192911dd39ce7d621a18ef0d419e6" }
anvil = { git = "https://github.com/foundry-rs/foundry", default-features = true, rev = "26a7559758c192911dd39ce7d621a18ef0d419e6" }
anvil-core = { git = "https://github.com/foundry-rs/foundry", default-features = true, rev = "26a7559758c192911dd39ce7d621a18ef0d419e6" }
cast = { git = "https://github.com/foundry-rs/foundry", rev = "26a7559758c192911dd39ce7d621a18ef0d419e6" }
forge-script = { git = "https://github.com/foundry-rs/foundry", rev = "26a7559758c192911dd39ce7d621a18ef0d419e6" }
revm = { version = "12.1", features = ["alloydb", "optimism"] }

# Kona + OP Types
superchain-registry = "0.2.2"
kona-derive = { git = "https://github.com/ethereum-optimism/kona", rev = "6f7c119d93c854d31de27feadbe11362bafe9cfc", features = [
    "online",
] }

# Internal
op-test-vectors = { path = "crates/op-test-vectors" }
