[workspace]
members = ["crates/*", "bin/*"]
default-members = ["bin/opt8n", "bin/opdn", "bin/range-finder"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Eric Woolsey<ewoolsey@ualberta.ca>", "refcell"]
repository = "https://github.com/ethereum-optimism/tests"
homepage = "https://github.com/ethereum-optimism/tests"
exclude = ["**/target", "benches/"]

[workspace.dependencies]
# General
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
color-eyre = "0.6"
lazy_static = "1"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
clap = { version = "4", features = ["derive"] }
shellwords = "1"
reqwest = { version = "0.12", features = ["stream"] }
tracing-subscriber = "0.3.18"
hashbrown = "0.14.5"

# Alloy Dependencies
op-alloy-rpc-types = "0.1.4"
op-alloy-consensus = "0.1.4"
op-alloy-network = "0.1.5"
alloy-rlp = { version = "0.3.8" }
alloy-primitives = { version = "0.7" }
alloy-consensus = { version = "0.2" }
alloy-eips = { version = "0.2" }
alloy-rpc-types = { version = "0.2" }
alloy-genesis = "0.2"

# revm + reth
revm = { version = "13.0", features = ["optimism", "serde"] }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.5" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.5" }
reth-evm-optimism = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.5", features = ["optimism"] }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.0.5", features = ["optimism"] }

# Kona + OP Types
superchain-registry = "0.2.6"
kona-primitives = { git = "https://github.com/ethereum-optimism/kona", version = "0.0.1", features = ["online"] }
kona-derive = { git = "https://github.com/ethereum-optimism/kona", version = "0.0.2", features = ["online"] }
kona-mpt = { git = "https://github.com/ethereum-optimism/kona", version = "0.0.2" }

# Internal
op-test-vectors = { path = "crates/op-test-vectors" }
