[package]
name = "op-test-vectors"
description = "Types for test vectors"
version = "0.0.1"
exclude = ["src/testdata"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
op-alloy-rpc-types.workspace = true
op-alloy-consensus.workspace = true
alloy.workspace = true
serde.workspace = true
anvil-core.workspace = true
color-eyre.workspace = true

[dev-dependencies]
serde_json.workspace = true
