[package]
name = "op-test-vectors"
description = "Types for test vectors"
version = "0.2.0"
exclude = ["src/testdata"]
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
# Core
serde.workspace = true
color-eyre.workspace = true

# Foundry
anvil-core.workspace = true

# Alloy
alloy-rpc-types.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# OP Types
op-alloy-rpc-types.workspace = true
op-alloy-consensus.workspace = true

[dev-dependencies]
serde_json.workspace = true
