[package]
name = "opt8n"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
op-test-vectors = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
color-eyre = { workspace = true }
anvil = { workspace = true }
